Correctly set package version

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,6 +37,7 @@ stages:
         msbuildVersion: latest
         configuration: Release
         platform: Any CPU
+        msbuildArguments: /p:PackageVersion=$(GitVersion.SemVer)
 
     - task: PublishBuildArtifacts@1
       inputs:
