--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,9 @@ stages:
 
     steps:
     - task: GitVersion@5
+      inputs:
+        runtime: 'core'
+        configFilePath: 'gitversion.yml'
 
     - task: NuGetToolInstaller@1
       inputs:
