--- a/src/TargetFrameworks.Filtering/Targets/nventive.Nimue.TargetFrameworks.Filtering.targets
+++ b/src/TargetFrameworks.Filtering/Targets/nventive.Nimue.TargetFrameworks.Filtering.targets
@@ -1,3 +1,3 @@
 ﻿<Project>
-	<Import Project="$(MSBuildThisFileDirectory)FrameworkFiltering.targets" />
+	<Import Project="$(MSBuildThisFileDirectory)TargetFrameworks.Filtering.targets" />
 </Project>
