--- a/src/Application.Packaging/Application.Packaging.csproj
+++ b/src/Application.Packaging/Application.Packaging.csproj
@@ -8,22 +8,38 @@
 
 	<ItemGroup>
 		<!-- Include shared targets and props for all target frameworks -->
-		<None Include="Props\_Shared.props" Pack="true" PackagePath="$([System.Text.RegularExpressions.Regex]::Replace('$(TargetFrameworks)', '([^;]+)', 'build/$1/$(PackageId).props'))" />
-		<None Include="Targets\_Shared.targets" Pack="true" PackagePath="$([System.Text.RegularExpressions.Regex]::Replace('$(TargetFrameworks)', '([^;]+)', 'build/$1/$(PackageId).targets'))" />
+		<None Include="Props\_Shared.props"
+			  Pack="true"
+			  PackagePath="@(_AllTargetFrameworks->'build/%(Identity)/$(PackageId).props')" />
+		<None Include="Targets\_Shared.targets"
+			  Pack="true"
+			  PackagePath="@(_AllTargetFrameworks->'build/%(Identity)/$(PackageId).targets')" />
 
 		<!-- Include Android targets for the specified Android target frameworks -->
-		<None Include="Targets\Android.targets" Pack="true" PackagePath="$([System.Text.RegularExpressions.Regex]::Replace('$(_AndroidTargetFramworks)', '([^;]+)', 'build/$1/Packaging.targets'))" />
+		<None Include="Targets\Android.targets"
+			  Pack="true"
+			  PackagePath="@(_AndroidTargetFramworks->'build/%(Identity)/Packaging.targets')" />
 
 		<!-- Include iOS targets and props for the specified iOS target frameworks -->
-		<None Include="Props\iOS.props" Pack="true" PackagePath="$([System.Text.RegularExpressions.Regex]::Replace('$(_IosTargetFrameworks)', '([^;]+)', 'build/$1/Packaging.props'))" />
-		<None Include="Targets\iOS.targets" Pack="true" PackagePath="$([System.Text.RegularExpressions.Regex]::Replace('$(_IosTargetFrameworks)', '([^;]+)', 'build/$1/Packaging.targets'))" />
+		<None Include="Props\iOS.props"
+			  Pack="true"
+			  PackagePath="@(_IosTargetFrameworks->'build/%(Identity)/Packaging.props')" />
+		<None Include="Targets\iOS.targets"
+			  Pack="true"
+			  PackagePath="@(_IosTargetFrameworks->'build/%(Identity)/Packaging.targets')" />
 
 		<!-- Include UAP targets and props for the specified UAP target frameworks -->
-		<None Include="Props\UAP.props" Pack="true" PackagePath="$([System.Text.RegularExpressions.Regex]::Replace('$(_UapTargetFrameworks)', '([^;]+)', 'build/$1/Packaging.props'))" />
-		<None Include="Targets\UAP.targets" Pack="true" PackagePath="$([System.Text.RegularExpressions.Regex]::Replace('$(_UapTargetFrameworks)', '([^;]+)', 'build/$1/Packaging.targets'))" />
+		<None Include="Props\UAP.props"
+			  Pack="true"
+			  PackagePath="@(_UapTargetFrameworks->'build/%(Identity)/Packaging.props')" />
+		<None Include="Targets\UAP.targets"
+			  Pack="true"
+			  PackagePath="@(_UapTargetFrameworks->'build/%(Identity)/Packaging.targets')" />
 
 		<!-- Include WASM targets for the specified NetStandard target frameworks -->
-		<None Include="Targets\WASM.targets" Pack="true" PackagePath="$([System.Text.RegularExpressions.Regex]::Replace('$(_NetStandardTargetFrameworks)', '([^;]+)', 'build/$1/Packaging.targets'))" />
+		<None Include="Targets\WASM.targets"
+			  Pack="true"
+			  PackagePath="@(_NetStandardTargetFrameworks->'build/%(Identity)/Packaging.targets')" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -31,6 +47,6 @@
 		<!-- This should be suppressed if code is added to this project-->
 		<None Include="$(MSBuildThisFileDirectory)..\_._"
 			  Pack="true"
-			  PackagePath="$([System.Text.RegularExpressions.Regex]::Replace('$(TargetFrameworks)', '([^;]+)', 'lib/$1/'))" />
+			  PackagePath="@(_AllTargetFrameworks->'lib/%(Identity)/')" />
 	</ItemGroup>
 </Project>
