--- a/src/Application.Versioning/Application.Versioning.csproj
+++ b/src/Application.Versioning/Application.Versioning.csproj
@@ -8,25 +8,39 @@
 
 	<ItemGroup>
 		<!-- Include shared targets and props for all target frameworks -->
-		<None Include="Props\_Shared.props" Pack="true" PackagePath="$([System.Text.RegularExpressions.Regex]::Replace('$(TargetFrameworks)', '([^;]+)', 'build/$1/$(PackageId).props'))" />
-		<None Include="Targets\_Shared.targets" Pack="true" PackagePath="$([System.Text.RegularExpressions.Regex]::Replace('$(TargetFrameworks)', '([^;]+)', 'build/$1/$(PackageId).targets'))" />
+		<None Include="Props\_Shared.props"
+			  Pack="true"
+			  PackagePath="@(_AllTargetFrameworks->'build/%(Identity)/$(PackageId).props')" />
+		<None Include="Targets\_Shared.targets"
+			  Pack="true"
+			  PackagePath="@(_AllTargetFrameworks->'build/%(Identity)/$(PackageId).targets')" />
 
 		<!-- Include Android targets for the specified Android target frameworks -->
-		<None Include="Targets\Android.targets" Pack="true" PackagePath="$([System.Text.RegularExpressions.Regex]::Replace('$(_AndroidTargetFramworks)', '([^;]+)', 'build/$1/Packaging.targets'))" />
+		<None Include="Targets\Android.targets"
+			  Pack="true"
+			  PackagePath="@(_AndroidTargetFramworks->'build/%(Identity)/Versioning.targets')" />
 
 		<!-- Include iOS targets and props for the specified iOS target frameworks -->
-		<None Include="Targets\iOS.targets" Pack="true" PackagePath="$([System.Text.RegularExpressions.Regex]::Replace('$(_IosTargetFrameworks)', '([^;]+)', 'build/$1/Packaging.targets'))" />
-		
+		<None Include="Targets\iOS.targets"
+			  Pack="true"
+			  PackagePath="@(_IosTargetFrameworks->'build/%(Identity)/Versioning.targets')" />
+
 		<!-- Include UAP targets and props for the specified UAP target frameworks -->
-		<None Include="Targets\UAP.targets" Pack="true" PackagePath="$([System.Text.RegularExpressions.Regex]::Replace('$(_UapTargetFrameworks)', '([^;]+)', 'build/$1/Packaging.targets'))" />
-		
+		<None Include="Targets\UAP.targets"
+			  Pack="true"
+			  PackagePath="@(_UapTargetFrameworks->'build/%(Identity)/Versioning.targets')" />
+
 		<!-- Include WASM targets for the specified NetStandard target frameworks -->
-		<None Include="Targets\WASM.targets" Pack="true" PackagePath="$([System.Text.RegularExpressions.Regex]::Replace('$(_NetStandardTargetFrameworks)', '([^;]+)', 'build/$1/Packaging.targets'))" />
+		<None Include="Targets\WASM.targets"
+			  Pack="true"
+			  PackagePath="@(_NetStandardTargetFrameworks->'build/%(Identity)/Versioning.targets')" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<!-- This file is included to indicate that there's nothing in the lib folder -->
 		<!-- This should be suppressed if code is added to this project-->
-		<None Include="$(MSBuildThisFileDirectory)..\_._" Pack="true" PackagePath="$([System.Text.RegularExpressions.Regex]::Replace('$(TargetFrameworks)', '([^;]+)', 'lib/$1/'))" />
+		<None Include="$(MSBuildThisFileDirectory)..\_._"
+			  Pack="true"
+			  PackagePath="@(_AllTargetFrameworks->'lib/%(Identity)/')" />
 	</ItemGroup>
 </Project>
