--- a/src/Application.Packaging/Targets/_Shared.targets
+++ b/src/Application.Packaging/Targets/_Shared.targets
@@ -1,3 +1,5 @@
 ﻿<Project>
+	<UsingTask AssemblyFile="$(MSBuildThisFileDirectory)/../../Tools/Application.Packaging.dll"
+			   TaskName="MSBuild.Community.Tasks.FileUpdate"/>
 	<Import Project="$(MSBuildThisFileDirectory)Packaging.targets" />
 </Project>
